2007-02-14  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/HtmlDoc.py: fix html template loading.
	* src/ReportBase/_ReportDialog.py: fix html template loading.

2007-02-13  Brian Matherly  <brian@gramps-project.org>
	* src/ViewManager.py: fix crash during backup on windows

2007-02-13  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsWidgets.py: Fall back to gtk.STOCK_DIALOG_INFO in case
	gtk.STOCK_INFO is missing.

2007-02-12  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/AncestorChart2.py: Fix title color
	* src/plugins/DescendChart.py: Fix title color
	* src/plugins/TimeLine.py: Fix title color
	* src/docgen/PSDrawDoc.py: Fix center_text and draw_bar

2007-02-12  Brian Matherly  <brian@gramps-project.org>
	* src/BaseDoc.py: remove write_at
	* src/docgen/PSDrawDoc.py: remove write_at
	* src/docgen/SvgDrawDoc.py: remove write_at, add center_text
	* src/docgen/OpenOfficeDoc.py: remove write_at
	* src/docgen/PdfDoc.py: remove write_at
	* src/docgen/GtkPrint.py: remove write_at
	* src/plugins/StatisticsChart.py: pass draw style to legend
	* src/docgen/LPRDoc.py: remove write_at
	* src/docgen/ODFDoc.py: remove write_at
	* src/ReportBase/_ReportUtils.py

2007-02-12  Brian Matherly  <brian@gramps-project.org>
	* src/BaseDoc.py: remove unused functions
	* src/docgen/KwordDoc.py: remove unused functions
    * src/docgen/OpenOfficeDoc.py: remove unused functions
    * src/docgen/HtmlDoc.py: remove unused functions
    * src/docgen/LPRDoc.py: remove unused functions
    * src/docgen/ODFDoc.py: remove unused functions

2007-02-12  Don Allingham  <don@gramps-project.org>
	* src/plugins/FindDupes.py: catch window already open message

2007-02-11  Don Allingham  <don@gramps-project.org>
	* src/Merge/_MergePlace.py (MergePlaces.merge): fix typo on 
	add_source_reference

2007-02-07  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/DisplayTabs/_NoteTab.py: move "rich text" notes to 2.3 branch.
