@@ -44,6 +44,12 @@ AM_CONDITIONAL(ENABLE_SK, test "x$packager_mode" = "xfalse" -a "x$enable_scrollk
 AC_SUBST(RELEASE)
 AC_SUBST(VERSIONSTRING)
 
+dnl These are needed for the full paths for the manual output
+HELPPATH=$(pwd)/help/output
+FONTPATH=/usr/share/fonts/truetype/freefont
+AC_SUBST(HELPPATH)
+AC_SUBST(FONTPATH)
+
 dnl Add the languages which your application supports here.
 ALL_LINGUAS="hu zh_CN cs da de es fr it nb nl no pl pt_BR ro ru sv eo fi lt sk tr"
 GETTEXT_PACKAGE=gramps
@@ -194,6 +200,8 @@ AC_CONFIG_FILES([
 po/Makefile.in
 m4/Makefile
 help/Makefile
+help/output/Makefile
+help/output/grampsfop.xconf
 Makefile
 gramps.spec
 gramps.sh
