@@ -1,6 +1,8 @@
 # This is the help level Makefile for gramps
 # $Id$
 
+SUBDIRS = output
+
 include $(top_srcdir)/gnome-doc-utils.make
 dist-hook: doc-dist-hook
 
