@@ -1,0 +1,58 @@
+<?xml version="1.0"?>
+
+<fop version="1.0">
+
+  <!-- Source resolution in dpi (dots/pixels per inch) for 
+     determining the size of pixels in SVG and bitmap images, 
+     default: 72dpi -->
+  <source-resolution>72</source-resolution>
+  <!-- Target resolution in dpi (dots/pixels per inch) for 
+     specifying the target resolution for generated bitmaps, 
+     default: 72dpi -->
+  <target-resolution>72</target-resolution>
+ 
+  <renderers>
+    <renderer mime="application/pdf">
+       <fonts>
+        <!-- embedded fonts -->
+        <!--
+        This information must exactly match the font specified
+        in the fo file. Otherwise it will use a default font.
+        -->
+        <font metrics-url="file://@HELPPATH@/FreeSerif.xml"
+          kerning="yes" embed-url="file://@FONTPATH@/FreeSerif.ttf">
+          <font-triplet name="FreeSerif" style="normal" weight="normal"/>
+        </font>
+        <font metrics-url="file://@HELPPATH@/FreeSerifBold.xml" 
+          kerning="yes" embed-url="file://@FONTPATH@/FreeSerifBold.ttf">
+          <font-triplet name="FreeSerif" style="normal" weight="bold"/>
+        </font>
+        <font metrics-url="file://@HELPPATH@/FreeSerifItalic.xml" 
+          kerning="yes" embed-url="file://@FONTPATH@/FreeSerifItalic.ttf">
+          <font-triplet name="FreeSerif" style="italic" weight="normal"/>
+        </font>
+        <font metrics-url="file://@HELPPATH@/FreeSerifBoldItalic.xml" 
+          kerning="yes" embed-url="file://@FONTPATH@/FreeSerifBoldItalic.ttf">
+          <font-triplet name="FreeSerif" style="italic" weight="bold"/>
+        </font>
+        <font metrics-url="file://@HELPPATH@/FreeMono.xml" 
+          kerning="yes" embed-url="file://@FONTPATH@/FreeMono.ttf">
+          <font-triplet name="FreeMono" style="normal" weight="normal"/>
+        </font>
+        <font metrics-url="file://@HELPPATH@/FreeMonoBold.xml" 
+          kerning="yes" embed-url="file://@FONTPATH@/FreeMonoBold.ttf">
+          <font-triplet name="FreeMono" style="normal" weight="bold"/>
+        </font>
+        <font metrics-url="file://@HELPPATH@/FreeMonoOblique.xml" 
+          kerning="yes" embed-url="file://@FONTPATH@/FreeMonoOblique.ttf">
+          <font-triplet name="FreeMono" style="italic" weight="normal"/>
+        </font>
+        <font metrics-url="file://@HELPPATH@/FreeMonoBoldOblique.xml" 
+          kerning="yes" embed-url="file://@FONTPATH@/FreeMonoBoldOblique.ttf">
+          <font-triplet name="FreeMono" style="italic" weight="bold"/>
+        </font>
+      </fonts>
+    </renderer>
+  </renderers>
+
+</fop>
